k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nhi-alps
  labels:
    app.kubernetes.io/managed-by: kubectl
